--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test": "./node_modules/lab/bin/lab -v",
     "start": "npm-run-all --parallel lint start:server",
     "start:server": "npm run serve",
-    "start:dev": "nodemon lib/server.js --exec babel-node --presets es2015,stage-2",
+    "start:dev": "nodemon lib/server.js --exec babel-node",
     "lint": "eslint . --ext .js",
-    "build": "babel lib -d dist --presets es2015,stage-2",
-    "serve": "node dist/server.js"
+    "build": "babel lib -d dist",
+    "serve": "node dist/server.js",
+    "genSchema": ""
   },
   "author": "manpreet",
   "private": false,
@@ -28,15 +29,26 @@
     "api"
   ],
   "dependencies": {
+    "@playlyfe/gql": "^2.3.1",
     "glue": "^4.1.0",
     "good": "^7.1.0",
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
+    "graphql-server-hapi": "^0.8.5",
+    "graphql-subscriptions": "^0.4.3",
+    "graphql-tools": "^1.0.0",
     "hapi": "^16.1.1",
-    "hapi-auth-jwt2": "^7.2.4"
+    "hapi-auth-jwt2": "^7.2.4",
+    "knex": "^0.13.0",
+    "lodash": "^4.17.4",
+    "pg": "^6.3.1",
+    "reddit-score": "^0.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-inline-import": "^2.0.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "blipp": "^2.3.0",
     "code": "^4.0.0",
     "eslint": "^3.19.0",
