--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser":"babel-eslint",
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
@@ -14,10 +15,10 @@
   },
   "rules": {
     "quotes": 0,
-    "indent": ["error", 2, {"SwitchCase": 1}],
+    "indent": 0,//["error", 2, {"SwitchCase": 1}],
     "no-console": 0,
     "no-debugger": 0,
-    "semi": [1, "always"],
+    "semi": 0,
     "no-trailing-spaces": 0,
     "eol-last": 0,
     "no-underscore-dangle": 0,
