--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test": "./node_modules/lab/bin/lab -v",
     "start": "npm-run-all --parallel lint start:server",
     "start:server": "npm run serve",
-    "start:dev": "nodemon lib/server.js --exec babel-node",
+    "start:dev": "nodemon --inspect server.js --exec babel-node",
     "lint": "eslint . --ext .js",
-    "build": "babel lib -d dist",
+    "build": "babel . -d dist",
     "serve": "node dist/server.js",
     "genSchema": ""
   },
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-inline-import": "^2.0.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
