--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "web-api",
-  "version": "1.0.0",
-  "license": "MIT",
-  "description": "Lean Hapi API Boilerplate",
-  "bugs": {
-    "url": "https://github.com/rjmreis/hapi-api/issues"
-  },
+  "version": "0.1.0",
+  "description": "GraphQl API with Express",
   "main": "server.js",
   "scripts": {
     "test": "./node_modules/lab/bin/lab -v",
@@ -14,35 +10,28 @@
     "start:dev": "nodemon --inspect server.js --exec babel-node",
     "lint": "eslint . --ext .js",
     "build": "babel . -d dist",
-    "serve": "node dist/server.js",
-    "genSchema": ""
+    "serve": "node dist/server.js"
   },
   "author": "manpreet",
   "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rjmreis/hapi-api.git"
-  },
   "keywords": [
-    "hapi",
     "auth",
     "api"
   ],
   "dependencies": {
     "@playlyfe/gql": "^2.3.1",
-    "glue": "^4.1.0",
-    "good": "^7.1.0",
-    "good-console": "^6.4.0",
-    "good-squeeze": "^5.0.2",
-    "graphql-server-hapi": "^0.8.5",
+    "apollo-upload-server": "^2.0.3",
+    "aws-sdk": "^2.82.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-graphql": "^0.6.6",
     "graphql-subscriptions": "^0.4.3",
     "graphql-tools": "^1.0.0",
-    "hapi": "^16.1.1",
-    "hapi-auth-jwt2": "^7.2.4",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "pg": "^6.3.1",
-    "reddit-score": "^0.0.2"
+    "reddit-score": "^0.0.2",
+    "s3-upload-stream": "^1.0.7"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -50,7 +39,6 @@
     "babel-plugin-inline-import": "^2.0.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "blipp": "^2.3.0",
     "code": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
@@ -59,6 +47,6 @@
     "npm-run-all": "^4.0.2"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=6.0.0"
   }
 }
